# proclog

./: .gitignore  Cargo.toml  Justfile  LICENSE  Readme.md  flake.nix
.github/workflows/: ci.yml
crates/proclog/: Cargo.toml
crates/proclog-asp/: Cargo.toml
crates/proclog-asp/src/: asp.rs  lib.rs  optimization_tests.rs
crates/proclog-asp/tests/unit/: aggregate_tests.rs  asp_multiple_choice_tests.rs  asp_tests.rs  choice_constant_bounds_tests.rs
crates/proclog-ast/: Cargo.toml
crates/proclog-ast/src/: lib.rs
crates/proclog-ast/tests/unit/: ast_tests.rs
crates/proclog-builtins/: Cargo.toml
crates/proclog-builtins/src/: builtins.rs
crates/proclog-builtins/tests/unit/: builtins_tests.rs
crates/proclog-cli/: Cargo.toml
crates/proclog-cli/src/: main.rs  ratatui.rs  repl.rs  test_runner.rs
crates/proclog-cli/src/cli/: mod.rs  repl.rs  run.rs  test.rs
crates/proclog-cli/tests/: invalid_parse.rs  run_command.rs
crates/proclog-cli/tests/fixtures/: invalid_program.pro  run_sample.proclog
crates/proclog-cli/tests/unit/: cli_repl_tests.rs  repl_tests.rs
crates/proclog-core/: Cargo.toml
crates/proclog-core/src/: constants.rs  database.rs  unification.rs
crates/proclog-core/tests/unit/: constants_tests.rs  database_tests.rs  unification_tests.rs
crates/proclog-eval/: Cargo.toml
crates/proclog-eval/src/: evaluation.rs  lib.rs  query.rs  query_integration_tests.rs
crates/proclog-eval/tests/unit/: evaluation_tests.rs  query_tests.rs
crates/proclog-grounding/: Cargo.toml
crates/proclog-grounding/src/: grounding.rs
crates/proclog-grounding/tests/unit/: grounding_tests.rs
crates/proclog-parser/: Cargo.toml
crates/proclog-parser/src/: arithmetic_integration_tests.rs  lib.rs  parser.rs  span.rs  token.rs
crates/proclog-parser/tests/unit/: parser_tests.rs  span_tests.rs
crates/proclog-safety/: Cargo.toml
crates/proclog-safety/src/: safety.rs  stratification.rs
crates/proclog-safety/tests/unit/: safety_tests.rs  stratification_tests.rs
crates/proclog-sat/: Cargo.toml
crates/proclog-sat/src/: asp_sat.rs  asp_sat_tests.rs  lib.rs  sat_solver.rs
crates/proclog-sat/tests/unit/: sat_solver_tests.rs
crates/proclog-test-runner/: Cargo.toml
crates/proclog-test-runner/src/: lib.rs  test_runner.rs
crates/proclog-test-runner/tests/unit/: test_runner_tests.rs
crates/proclog-wasm/: Cargo.toml
crates/proclog-wasm/src/: lib.rs
crates/proclog-wasm/tests/unit/: wasm_tests.rs
crates/proclog/src/: aggregate_tests.rs  arithmetic_integration_tests.rs  asp.rs  asp_multiple_choice_tests.rs  asp_sat.rs  asp_sat_tests.rs  ast.rs  choice_constant_bounds_tests.rs  constants.rs  database.rs  evaluation.rs  grounding.rs  lib.rs  optimization_tests.rs  parser.rs  query.rs  query_integration_tests.rs  safety.rs  sat_solver.rs  splr_api_test.rs  stratification.rs  test_runner.rs  unification.rs
examples/: 01_basic_facts.pl  02_rules_and_inference.pl  03_transitive_closure.pl  04_constants_and_arithmetic.pl  05_dungeon_generation.pl  06_quest_generation.pl  07_item_generation.pl  08_character_creation_asp.pl  09_dungeon_generation_asp.pl  10_item_crafting_asp.pl  11_loot_loadouts_asp.pl  12_party_formation_asp.pl  13_count_aggregates.pl  14_asp_sat_solver.pl  16_transitive.pl  datatypes.proclog  dungeon.proclog
src/: arithmetic_integration_tests.rs  asp.rs  asp_multiple_choice_tests.rs  ast.rs  builtins.rs  choice_constant_bounds_tests.rs  constants.rs  database.rs  evaluation.rs  grounding.rs  main.rs  parser.rs  query.rs  query_integration_tests.rs  repl.rs  safety.rs  stratification.rs  test_runner.rs  unification.rs
src/cli/: repl.rs  test.rs
