[workspace]
members = [
    "crates/proclog",
    "crates/proclog-ast",
    "crates/proclog-parser",
    "crates/proclog-cli",
    "crates/proclog-wasm",
]
resolver = "2"

[workspace.dependencies]
ariadne = "0.4"
chumsky = "0.9"
internment = "0.8"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
notify = "6"
rand = "0.8"
rand_chacha = "0.3"
ratatui = "0.27"
