[package]
name = "proclog-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
proclog-ast = { path = "../proclog-ast" }
proclog-builtins = { path = "../proclog-builtins" }
proclog-core = { path = "../proclog-core" }
proclog-grounding = { path = "../proclog-grounding" }
proclog-safety = { path = "../proclog-safety" }

[dev-dependencies]
proclog-parser = { path = "../proclog-parser" }
internment = { workspace = true }
