[package]
name = "proclog-sat"
version = "0.1.0"
edition = "2021"

[dependencies]
proclog-ast = { path = "../proclog-ast" }
proclog-asp = { path = "../proclog-asp" }
proclog-core = { path = "../proclog-core" }
proclog-eval = { path = "../proclog-eval" }
proclog-grounding = { path = "../proclog-grounding" }
internment = { workspace = true }
splr = "0.17.2"

[dev-dependencies]
proclog-parser = { path = "../proclog-parser" }
