[package]
name = "proclog-test-runner"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "proclog-ast/serde"]

[dependencies]
internment = { workspace = true }
proclog-ast = { path = "../proclog-ast" }
proclog-asp = { path = "../proclog-asp" }
proclog-builtins = { path = "../proclog-builtins" }
proclog-core = { path = "../proclog-core" }
proclog-eval = { path = "../proclog-eval" }
proclog-grounding = { path = "../proclog-grounding" }
proclog-parser = { path = "../proclog-parser" }
proclog-sat = { path = "../proclog-sat" }
serde = { version = "1.0", features = ["derive"], optional = true }
