[package]
name = "proclog-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ProcLog Contributors"]
description = "WebAssembly bindings for ProcLog logic programming language"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proclog = { path = "../proclog", features = ["serde"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
